--- a/src/pages/team/index.astro
+++ b/src/pages/team/index.astro
@@ -57,6 +57,10 @@ import { TEAM_TITLE, TEAM_DESCRIPTION, TEAM_KEYWORDS } from "../../consts";
 </BaseLayout>
 
 <style>
+    main {
+        padding-bottom: 7rem;
+    }
+
     .team {
         display: flex;
         flex-direction: column;
