--- a/src/pages/blog/[page].astro
+++ b/src/pages/blog/[page].astro
@@ -41,7 +41,7 @@ import '../../styles/blog-collection.css'
 import { Schema } from "astro-seo-schema"
 ---
 
-<BaseLayout title={page.currentPage}>
+<BaseLayout title={`Page ${page.currentPage} | The Clean Network Blog`}>
 
 	<BackBt url={`/blog/`} label="Blog Home"/>
 
