--- a/src/components/BackBt.astro
+++ b/src/components/BackBt.astro
@@ -33,6 +33,7 @@ const { url, label } = Astro.props;
         -o-transition: background-color 0.3s ease;
         border-right: 0.2rem solid var(--light-a);
         border-bottom: 0.2rem solid var(--light-a);
+        box-shadow: 2rem 1rem 2.5rem -1.2rem var(--light-b);
     }
     
     .back:hover {
