--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -5,7 +5,7 @@
 
 <section class="contact default_bg" id="contact">
     <div class="ctnr reveal">
-        <form name="contact" method="POST" data-netlify="true">
+        <!-- <form name="contact" method="POST" data-netlify="true">
             {contactPage != "true" ? (
                 <span class="title">Get in touch</span>
             ) : (
@@ -35,10 +35,12 @@
 						
                 <noscript>You need to enable JavaScript on your browser to submit emails.</noscript>
             </p>
-            </form>
+            </form> -->
+
+            <iframe src="https://forms.monday.com/forms/embed/2b8278e5846d1e40576e7f26f8886cc2?r=euc1" width="650" height="500" style="border: 0; box-shadow: 5px 5px 56px 0px rgba(0,0,0,0.25);"></iframe>
     </div>
 
-    <script>
+    <!-- <script>
         import "../scripts/form.js";
-    </script>
+    </script> -->
 </section>
