--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -9,15 +9,24 @@
 	}
 
 	.contact > .ctnr {
-		width: clamp(9rem,89vw,62rem);
-		margin-inline: auto;
-		background-color: var(--light);
-		padding: clamp(3rem,9vw,5rem) clamp(2rem,6vw,6rem) 0;
-		box-sizing: border-box;
-		border-radius: 2rem;
-    	box-shadow: 0 1.3rem 1rem -1rem var(--light-b);
+        width: clamp(9rem, 89vw, 85rem);
+        height: clamp(9rem, 89vmax, 75vh);
+        margin-inline: auto;
+        background-color: var(--light);
+        /* padding: clamp(3rem, 9vw, 5rem) clamp(2rem, 6vw, 6rem) 0; */
+        box-sizing: border-box;
+        border-radius: 2rem;
+        box-shadow: 0 1.3rem 1rem -1rem var(--light-b);
         border: 0.1rem solid var(--light-a);
+        border-radius: 2rem;
+        overflow: hidden;
 	}
+
+    
+	.contact > .ctnr iframe { 
+        width: 100%;
+        height: 100%;
+    }
 
 	form .title {
 		text-align: center;
