--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,19 @@ const testimonials = await getCollection("testimonials");
 
 import { SITE_TITLE, SITE_DESCRIPTION, SITE_KEYWORDS, SITE_H1, INTRO_H2, TEXT_BLOCK, SERVICES_SECTION_DESCRIPTION, SECTORS_SECTION_DESCRIPTION, LOCATIONS_SECTION_DESCRIPTION, FULL_ADDRESS, TEL, TEL_HREF, TEL_INTERNATIONAL, STREET, POSTAL_CODE } from "../consts";
 
-import BenefitsSection from "../components/BenefitsSection.astro";
+const benefits = (await getCollection('benefits')).sort((a, b) => {
+    // Check if both items have an 'order' property
+    if (a.data.order !== undefined && b.data.order !== undefined) {
+        return a.data.order - b.data.order; // Sort by 'order' if both have it
+    } else if (a.data.order !== undefined) {
+        return -1; // 'a' has 'order', but 'b' doesn't, so 'a' comes first
+    } else if (b.data.order !== undefined) {
+        return 1; // 'b' has 'order', but 'a' doesn't, so 'b' comes first
+    } else {
+        // Both 'a' and 'b' don't have 'order', fallback to sorting by 'title'
+        return a.data.title.localeCompare(b.data.title);
+    }
+});
 
 ---
 
@@ -64,7 +76,29 @@ import BenefitsSection from "../components/BenefitsSection.astro";
 			</div>
 		</section>
 
-		<BenefitsSection/>
+		<section class="benefits scroll_margin_top" id="why-the-clean-network">
+			<div class="ctnr">
+				<h3>Why the Clean Network</h3>
+
+				<p>{benefits.length} reasons to choose the <b>Clean Network</b> cleaning services:</p>
+
+				<div class="bullets">
+					{
+						benefits.map((benefits) => (
+							<>
+								<div class="box squares_bg reveal_interval01">
+									{benefits.data.icon == "" ? "" : (<img src={benefits.data.icon} class="icon" alt={`${(benefits.data.title).replace( /(<([^>]+)>)/ig, '')} icon`}/>)}
+									
+									<h4 set:html={benefits.data.title}class="title"></h4>
+								</div>
+							</>
+						))
+					}
+				</div>
+			</div>
+				
+			<a href="/contact/" class="main cta" aria-label="Get a free quote">Get a Free Quote</a>
+		</section>
 
 		<section class="clients">
 			<div class="ctnr reveal">
