--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -64,7 +64,7 @@ import BenefitsSection from "../components/BenefitsSection.astro";
 			</div>
 		</section>
 
-		<BenefitsSection/>
+		<BenefitsSection type="default"/>
 
 		<section class="clients">
 			<div class="ctnr reveal">
