--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -49,7 +49,7 @@ import { TEL, TEL_HREF } from "../consts";
                         <div>
                             <a href="/services/#indoor" class="heading indoor icon">Indoor Cleaning</a>
 
-                            <hr />
+                            <hr/>
 
                             {
                                 services.map((services) => (
@@ -130,7 +130,7 @@ import { TEL, TEL_HREF } from "../consts";
 
                 <a href="/blog/">Blog</a>
 
-                <!-- <a href="/locations/">Locations</a> -->
+                <a href="/locations/">Locations</a>
                 
                 <a href="/about/">About</a>
                 
