--- a/src/styles/locations.css
+++ b/src/styles/locations.css
@@ -1,15 +1,29 @@
 .map {
-    position: sticky;
-    top:clamp(1rem,16vmin,7.5rem);
-    height: 100vh;
-    height: 100lvh;
+    position: relative;
+    height: 55vh;
+    height: 55lvh;
     background-color: var(--light-d);
-    /* position: relative; */
     border-top: 0.3rem solid var(--light);
-    /* box-shadow: 0 -1rem 3rem -1rem var(--light-b); */
-    background-image: url(/textures/dot-grid.jpg);
-    background-image: image-set(url(/textures/dot-grid.jpg) , url(/textures/dot-grid.webp) );
+    background-image: image-set(url(/textures/dot-grid.jpg), url(/textures/dot-grid.webp));
     background-size: 40rem;
+}
+
+.map::after {
+    content: "Loading map...";
+    position: absolute;
+    inset: 0;
+    margin: auto;
+    z-index: 1;
+    display: inline-block;
+    color: var(--primary-a);
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 400;
+    letter-spacing: 0.2rem;
 }
 
 .heading_ctnr .locations_list {
@@ -133,7 +147,7 @@
     display: flex;
     gap: 0.8rem;
     flex-flow: row wrap;
-    font-size: clamp(1.2rem, 3.5vw, 1.5rem);
+    font-size: clamp(1.3rem, 3.2vw, 1.4rem);
     flex: 1;
     align-items: center;
     height: fit-content;
@@ -162,7 +176,7 @@
 
 .area_covered li {
     color: var(--grey-b);
-    padding: 0.4rem 0.8rem;
+    padding: 0.2rem 0.5rem;
     border-radius: 0.3rem;
     -webkit-border-radius: 0.3rem;
     -moz-border-radius: 0.3rem;
@@ -184,9 +198,9 @@
     z-index: 3;
 }
 
-.bottom_info + .content_panel {
+/* .bottom_info + .content_panel {
     box-shadow: 0 -8vmin 10rem 3rem #4d637b9c;
-}
+} */
 
 .content_panel {
     position: relative;
@@ -203,7 +217,7 @@
 }
 
 .content_panel.text .content {
-    font-size: clamp(1rem, 4vw, 1.8rem);
+    font-size: clamp(1.5rem, 4vmin, 1.7rem);
     color: var(--grey-b);
 }
 
@@ -289,13 +303,13 @@
 
 @media screen and (min-width:850px) {
     .map {
-        /* position: sticky;
-        top:clamp(1rem,16vmin,7.5rem); */
+        position: sticky;
+        top:clamp(1rem,16vmin,7.5rem);
         border-top: unset;
     }
 
     .iframe_ctnr {
-        height: calc(100% - var(--header-height));
+        
     }
 
     .contact_box_ctnr {
@@ -305,11 +319,21 @@
     .bottom_info {
         flex-flow: row wrap;
         align-items: flex-end;
-        position: sticky;
-        bottom:0;
+        position: absolute;
+        transform: translateY(-100%);
+        width: 95%;
+        box-sizing: border-box;
     }
     
     .area_covered .intro {
         margin-bottom: unset;
+    }
+
+    .area_covered {
+        background-color: rgb(230 238 255 / 62%);
+        border: 0.1rem solid var(--light);
+        box-shadow: 0 1rem 2rem -1rem var(--light-b);
+        backdrop-filter: blur(1rem);
+        -webkit-backdrop-filter: blur(1rem);
     }
 }
