--- a/src/styles/subpages.css
+++ b/src/styles/subpages.css
@@ -180,20 +180,21 @@ h2::after {
 }
 
 .heading_ctnr h1 {
-    font-size: clamp(1rem, 8.5vmin, 5.5rem);
+    font-size: clamp(1rem, 8vmin, 5.5rem);
     color: var(--primary-e);
-    /* max-width: 105rem; */
     margin-inline: auto;
+    text-align: center;
 }
 
 .heading_ctnr p {
     display: block;
     margin-inline: auto;
-    width: clamp(9rem, 89vw, 122rem);
+    max-width: 122rem;
     font-size: clamp(1.5rem, 4vmin, 1.7rem);
     line-height: 1.5;
     font-weight: 400;
     color: var(--grey-b);
+    text-align: center;
 }
 
 .heading_ctnr p b, .heading_ctnr p strong {
@@ -230,6 +231,17 @@ main > .txt_ctnr h2 {
 
 
 
+
+@media screen and (min-width:500px) {
+    .heading_ctnr p {
+        font-size: clamp(1.5rem, 4vmin, 1.7rem);
+    }
+}
+
+
+
+
+
 @media screen and (min-width:850px) {
     .panel > .ctnr {
         flex-direction: row;
@@ -243,10 +255,6 @@ main > .txt_ctnr h2 {
         max-width: clamp(40rem,32vw,95rem);
         margin-inline: 4vw 6vw;
         padding: clamp(3rem,12vmin,9rem) 0 clamp(3rem,12vmin,9rem);
-    }
-
-    .heading_ctnr .content {
-        text-align: center;
     }
     
     .panel .main.cta {
