--- a/src/pages/locations/index.astro
+++ b/src/pages/locations/index.astro
@@ -52,7 +52,7 @@ const locations = (await getCollection('locations')).sort((a, b) => {
             </div>
         </div>
 
-        <div class="map">
+        <div class="general map">
             <noscript>You need to enable JavaScript on your browser to see this content.</noscript>
 
             <div class="contact_box_ctnr reveal">
