--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -44,7 +44,7 @@ const locations = (await getCollection('locations')).sort((a, b) => {
             <a href="/services/">Services</a>
             <a href="/sectors/">Sectors</a>
             <a href="/blog/">Blog</a>
-            <a href="/locations/">Location</a>
+            <a href="/locations/">Locations</a>
             <a href="/about/">About</a>
             <a href="/team/">Our Team</a>
             <a href="/FAQ/">FAQ</a>
